[tool.poetry]
name = "typerconf"
version = "1.0"
description = "Library to read and write configs using API and CLI with Typer"
authors = ["Daniel Bosk <daniel@bosk.se>"]
include = ["src/**/*.py"]

[tool.poetry.dependencies]
python = "^3.7"
appdirs = "^1.4.4"
typer = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
